--- a/HRAssist/assets/css/style.css
+++ b/HRAssist/assets/css/style.css
@@ -184,6 +184,8 @@ h6 {
 }
 
 
+
+
 /**
 * Mobile Navigation 
 */
@@ -271,6 +273,204 @@ h6 {
   color: #5c9f24;
   padding-left: 15px;
 }
+
+
+
+/**
+* Dropdown Profile
+*/
+
+.action{
+  position:fixed;
+  top: 1.1vw;
+  right:3vw;
+}
+
+.action .profile img{
+  position: absolute;
+  width:3.2vw; 
+  height:3.2vw;
+  top:-0.5vw;
+  left: -5vw;
+}
+
+.action .menu {
+  position: absolute;
+  top: 120px;
+  right: 1.7vw;
+  padding: 20px 0px;
+  background: #08533F;
+  width: 280px;
+  box-sizing: 0 5px 25px rgba(255, 255, 255, 0.1);
+  border-radius: 15px;
+  transition: 0.5s;
+  visibility: hidden;
+  opacity: 0;
+}
+
+.action .menu::before{
+    content: '';
+    position:absolute;
+    top: -5px;
+    right: 28px;
+    width: 20px;
+    height: 20px;
+    background: #08533F;
+    transform: rotate(45deg);
+}
+
+.action .menu.active{
+    top: 80px;
+    visibility:visible;
+    opacity: 1;
+}
+
+
+.action .menu h3{
+  width: 100%;
+  text-align: center;
+  font-size: 18px;
+  padding: 20px 0;
+  font-weight: 500;
+  font-size: 18px;
+  color: #f6f6f6;
+  line-height: 1.2em;
+}
+
+.action .menu ul li {
+
+    list-style: none;
+    padding: 10px 10px;
+    display: flex;
+    align-items: center;
+    
+}
+
+.action .menu ul li i {
+ 
+  max-width: 20px;
+  margin-right: 25px;
+  opacity: 0.5;
+  transition: 0.5s;
+  color: #f6f6f6;
+}
+
+.action .menu ul li:hover i {
+  opacity: 1;
+}
+
+.action .menu ul li a{
+    display: inline-block;
+    text-decoration: none;
+    color: #f6f6f6;
+    font-weight: 500;
+    transition: 0.5s;
+}
+
+.action .menu ul li:hover a {
+    color: #5c9f24;
+}
+
+/**
+* End-Dropdown Profile
+*/
+
+.button1 {
+  position: absolute;
+  top: 18vh;
+  left: 52.08vw;
+  width: 9.16vw;
+  height: 3.33vh;
+  cursor: pointer;
+  background-color: #068e6b;
+  color: #fff;
+  transition: 1s;
+  border-radius: 2vw;
+  border:none;
+}
+
+.button1:hover{
+  background-color: #08533f;
+  color: #fff;
+}
+
+.button2 {
+  position: absolute;
+  top: 18vh;
+  left: 65.1vw;
+  border-radius: 2vw;
+  width: 9.16vw;
+  height: 3.33vh;
+  cursor: pointer;
+  background-color: #068e6b;
+  color: #fff;
+  transition: 1s;
+  border:none;
+
+}
+
+.button2:hover{
+  background-color: #08533f;
+  color: #fff;
+}
+.button3 {
+  position: absolute;
+  top: 18vh;
+  left: 78.13vw;
+  border-radius: 2vw;
+  width: 9.16vw;
+  height: 3.33vh;
+  cursor: pointer;
+  background-color: #068e6b;
+  color: #fff;
+  transition: 1s;
+  border:none;
+}
+.button3:hover{
+  background-color: #08533f;
+  color: #fff;
+}
+
+
+/**
+* Change Password Section
+*/
+
+form {
+  padding-top: 10px;
+  font-size: 13px;
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card-title {
+  font-weight: 300;
+}
+
+.btn {
+  font-size: 13px;
+}
+
+.login-form {
+  width: 320px;
+  margin: auto;
+  margin-top: 150px;
+}
+
+
+span {
+  font-size: 14px;
+}
+
+.submit-btn {
+  margin-top: 20px;
+}
+
+/**
+* End-Change Password Section
+*/
 
 
 /*--------------------------------------------------------------
