--- a/HrAdmin/assets/css/style.css
+++ b/HrAdmin/assets/css/style.css
@@ -9000,4 +9000,60 @@ code {
   -ms-flex-positive: 1;
   flex-grow: 1; }
 
+.organization-container {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.organization-container .details {
+  background: #ffffff;
+  box-shadow: 0 4px 16px -8px rgba(0, 0, 0, 0.5);
+  display: flex;
+  border-radius: 8px;
+  margin: 32px 0;
+}
+
+.details .org-left {
+  min-width: 82px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 8px 48px;
+}
+
+.details .org-right {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 24px;
+}
+
+.details .org-right h3.org-name {
+  font-size: 24px;
+  margin: 24px 0 10px 0;
+  color: #00674B;
+  text-transform: uppercase;
+}
+
+.details .org-right .num-orgmember {
+  background: #fff8ba;
+  color: #000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 140px;
+  padding: 8px;
+  border-radius: 16px;
+  font-size: 14px;
+  margin-bottom: 24px;
+}
+
+img.org-logo {
+  max-width: 100%;
+  vertical-align: middle;
+}
+
+a.org-link {
+  text-decoration: none;
+}
 /*# sourceMappingURL=style.css.map */
