--- a/HrAdmin/assets/css/style.css
+++ b/HrAdmin/assets/css/style.css
@@ -334,6 +334,8 @@ button {
   border-radius: 6px; 
   cursor: pointer;
   padding: 10px;
+  background-color: #08533F; 
+  color: #ffffff;
 }
 
 
@@ -9056,4 +9058,182 @@ img.org-logo {
 a.org-link {
   text-decoration: none;
 }
-/*# sourceMappingURL=style.css.map */
+
+.calendar-container{
+  position: relative;
+  width: 900px;
+  height: 450px;
+  min-height: 0 auto;
+  padding: 5px;
+  color: #fff;
+  display: flex; 
+  border-radius: 10px;
+  background-color: #063A2C;
+}
+
+.calendar{
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex; 
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  color: #878895;
+  border-radius: 10px;
+  background-color: #fff;
+}
+
+.calendar .month{
+  width: 100%;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+  font-size: 1.2rem;
+  font-weight: 500;
+  text-transform: capitalize;
+}
+
+.calendar .month .prev,
+.calendar .month .next {
+  cursor: pointer;
+}
+
+.calendar .month .prev:hover,
+.calendar .month .next:hover {
+  color: #07cdae;
+}
+
+.calendar .weekdays {
+  width: 100%;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 25px;
+  font-size: 1rem;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+.calendar .weekdays div {
+  width: 14.28%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.calendar .days {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 0 20px;
+  margin-bottom: 15px;
+}
+
+.calendar .days .day{
+  width: 14.28%;
+  height: 53px;
+  display: flex;
+  justify-content: right;
+  border: 1px solid #f5f5f5;
+  font-size: 12px;
+  font-weight: 300;
+  color: #096F53;
+  padding: 5px 5px 5px 0;
+  border: 1px solid #f5f5f5;
+}
+
+.calendar .day:not(.prev-date, .next-date):hover{
+  color: #fff;
+  background-color: #048562;
+}
+.calendar .days .prev-date,
+.calendar .days .next-date {
+  color: #b3b3b3;
+}
+
+.calendar .days .today {
+  position: relative;
+  font-size: 18px;
+  color: #fff;
+  background-color: #00674B;
+  
+}
+
+.calendar .days .today::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 0 10px 2px #00674B;
+}
+ 
+.bg-modal {
+  width: 80%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  position: absolute;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: none;
+}
+
+.modal-content {
+  width: 400px;
+  height: 400px;
+  background-color: white;
+  border-radius: 8px;
+  position: relative;
+}
+
+.formHeader{
+  height: 40px;
+  background-color: #27ae60;
+  overflow: hidden;
+  border-radius: 8px 8px 0 0;
+}
+
+.formHeader h3{
+  color: white;
+  margin: 8px;
+  padding-left: 10px;
+  font-weight: normal;
+}
+
+.close {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  top: 0;
+  right: 0;
+  color: black;
+  font-size: 28px;
+  align-items: center;
+  justify-content: center; 
+  margin-top: 5px;
+  margin-right: 5px;
+}
+
+.close:hover {
+  border-radius: 20px;
+  color: tomato;
+  cursor: pointer;
+  margin-top: 5px;
+  margin-right: 5px;
+}
+
+.formContent {
+  text-align: center;
+  margin-top: 20px;
+}
+
+
